Fixed parts of discovered
It seems some rooms are not getting properly removed.
I'll look into this later

--- a/index.org
+++ b/index.org
@@ -42,7 +42,6 @@ You can build your own copy of the game by opening index.org in emacs, and runni
 ** Statistics
 Stats are represented as dictionaries containing the following bits of info:
  * Value tuple
- * Starting Slot
  * Current Slot
 
 Each stat contains a list of 9 possible vaules. The 0 slot of each stat is always "dead".
@@ -109,7 +108,6 @@ Should a character take lethal damage before the haunt has started, the damage i
 This will be handled by the engine not the character object.
 
 ** Getting the stat value
-
 ** Miscellaneous Information 
 Characters have some bits of miscellaneous information in addition to their core statistics.
 This includes the name of the character, their age, birthday, hobbies, and other bits.
@@ -197,48 +195,48 @@ A list of the built in characters.
 #+name: room-table
 | ITEM                     | SHAPE                      | FLOORS   |
 |--------------------------+----------------------------+----------|
-| Wine Cellar              | (True,False,True,False)    | (-1)     |
+| Wine Cellar              | (True,False,True,False)    | (-1,)    |
 | Junk Room                | (True,True,True,True)      | (-1,0,1) |
 | Organ Room               | (False, False, True, True) | (-1,0,1) |
 | Storeroom                | (True,False,False,False)   | (-1,1)   |
 | Creeky Hallway           | (True,True,True,True)      | (-1,0,1) |
 | Dusty Hallway            | (True,True,True,True)      | (-1,0,1) |
-| Furnace Room             | (True,False,True,True)     | (-1)     |
-| Stairs from the Basement | (False,False,True,False)   | (-1)     |
+| Furnace Room             | (True,False,True,True)     | (-1,)    |
+| Stairs from the Basement | (False,False,True,False)   | (-1,)    |
 | Operating Laboratory     | (False,True,True,False)    | (-1,1)   |
-| Pentagram Chamber        | (False,True,False,False)   | (-1)     |
-| Attic                    | (False,False,True,False)   | (1)      |
+| Pentagram Chamber        | (False,True,False,False)   | (-1,)    |
+| Attic                    | (False,False,True,False)   | (1,)     |
 | Chapel                   | (True,False,False,False)   | (0,1)    |
 | Research Laboratory      | (True,False,True,False)    | (-1,1)   |
 | Mystic Elevator          | (True,False,False,False)   | (-1,0,1) |
 | Vault                    | (True,False,False,False)   | (-1,1)   |
-| Gardens                  | (True,False,True,False)    | (0)      |
-| Graveyard                | (False,False,True,False)   | (0)      |
-| Patio                    | (True,False,True,True)     | (0)      |
+| Gardens                  | (True,False,True,False)    | (0,)     |
+| Graveyard                | (False,False,True,False)   | (0,)     |
+| Patio                    | (True,False,True,True)     | (0,)     |
 | Servants' Quarters       | (True,True,True,True)      | (-1,1)   |
-| Catacombs                | (True,False,True,False)    | (-1)     |
-| Ballroom                 | (True,True,True,True)      | (0)      |
+| Catacombs                | (True,False,True,False)    | (-1,)    |
+| Ballroom                 | (True,True,True,True)      | (0,)     |
 | Gymnasium                | (False,True,True,False)    | (-1,1)   |
-| Tower                    | (False,True,False,True)    | (1)      |
-| Larder                   | (True,False,True,False)    | (-1)     |
+| Tower                    | (False,True,False,True)    | (1,)     |
+| Larder                   | (True,False,True,False)    | (-1,)    |
 | Bloody Room              | (True,True,True,True)      | (0,1)    |
-| Dining Room              | (True,True,False,False)    | (0)      |
-| Master Bedroom           | (True,False,False,True)    | (1)      |
+| Dining Room              | (True,True,False,False)    | (0,)     |
+| Master Bedroom           | (True,False,False,True)    | (1,)     |
 | Conservatory             | (True,False,False,False)   | (0,1)    |
 | Collapsed Room           | (True,True,True,True)      | (0,1)    |
-| Bedroom                  | (False,True,False,True)    | (1)      |
-| Coal Chute               | (True,False,False,False)   | (1)      |
+| Bedroom                  | (False,True,False,True)    | (1,)     |
+| Coal Chute               | (True,False,False,False)   | (1,)     |
 | Game Room                | (True,True,True,False)     | (-1,0,1) |
 | Library                  | (False,False,True,True)    | (0,1)    |
 | Charred Room             | (True,True,True,True)      | (0,1)    |
 | Abandoned Room           | (True,True,True,True)      | (-1,0)   |
-| Balcony                  | (True,False,True,False)    | (1)      |
+| Balcony                  | (True,False,True,False)    | (1,)     |
 | Statuary Corridor        | (True,False,True,False)    | (-1,0,1) |
-| Underground Lake         | (True,True,False,False)    | (-1)     |
+| Underground Lake         | (True,True,False,False)    | (-1,)    |
 | Kitchen                  | (True,True,False,False)    | (-1,0)   |
-| Chasm                    | (False,True,False,True)    | (-1)     |
-| Crypt                    | (True,False,False,False)   | (-1)     |
-| Gallery                  | (True,False,True,False)    | (1)      |
+| Chasm                    | (False,True,False,True)    | (-1,)    |
+| Crypt                    | (True,False,False,False)   | (-1,)    |
+| Gallery                  | (True,False,True,False)    | (1,)     |
 #+END:
 ** TODO Map
  The map is a 3 dimensional space, with various points representing the rooms.
@@ -570,36 +568,25 @@ If the newly discoved room has an event in it, the player must stop moving and a
           raise KeyError
 
 
-  def discover(coordnate, direction):
-      def only_correct_floor():
-          #Really this only needs to be here
-          room = ROOM_LIST.pop()
-          if coordnate[2] in room.allowed_floors:
-              return room
-          else:
-              ROOM_LIST.append(room)
+
+
+  def discover(coordnate,direction,roomlist=ROOM_LIST):
+      def can_place_room_on_on_floor(room):
+          return coordnate[2] in room.allowed_floors
+      for room in roomlist:
+          if can_place_room_on_on_floor(room):
+              spawn_room(coordnate,room)
+              MAP[coordnate].set_coordnate(coordnate)
+              MAP[coordnate].set_edges()
+              MAP[coordnate].set_connections()
+              roomlist.remove(room)
               return None
-          return None
+          else:
+              pass
 
-      def can_place_room_on_floor():
-          #Check that it is possible to set a room on this floor
-          can = [coordnate[2] in room.allowed_floors for room in ROOM_LIST]
-          return  True in can
+      raise KeyError(
+          "Error: No rooms could be placed on {0}".format(coordnate[2]))
 
-      spawned_room = None
-      can_place_room = can_place_room_on_floor() 
-      if can_place_room:
-          while spawned_room == None:
-              spawned_room = only_correct_floor()
-              continue
-          spawn_room(coordnate,spawned_room)
-          MAP[coordnate].set_coordnate(coordnate)
-          MAP[coordnate].set_edges()
-          MAP[coordnate].set_connections()
-          return None
-      else:
-          #print("Error!: There are no rooms that can be placed on this floor!!")
-          return "ERROR!"
 
 
 
@@ -614,6 +601,7 @@ If the newly discoved room has an event in it, the player must stop moving and a
   import sys
   from traitor import house
 
+
   class MapUnitTests(unittest.TestCase):
 
       def setUp(self):
@@ -621,63 +609,60 @@ If the newly discoved room has an event in it, the player must stop moving and a
 
       def test_if_rooms_exist(self):
           list_of_rooms = [[r, self.MAP[r]] for r in self.MAP]
-          self.assertNotEqual(len(list_of_rooms),0)
+          self.assertNotEqual(len(list_of_rooms), 0)
 
       def test_if_rooms_connected(self):
-          #Check if connections can be made
+          # Check if connections can be made
 
           self.assertTrue(
-          self.MAP[(0,0,0)].is_connected_at('north'),
-          self.MAP[(0,0,0)].edges
+              self.MAP[(0, 0, 0)].is_connected_at('north'),
+              self.MAP[(0, 0, 0)].edges
           )
           self.assertTrue(
-          self.MAP[(0,1,0)].is_connected_at('north')
-              )
+              self.MAP[(0, 1, 0)].is_connected_at('north')
+          )
           self.assertTrue(
-          self.MAP[(0,2,0)].is_connected_at('up')
-              )
+              self.MAP[(0, 2, 0)].is_connected_at('up')
+          )
 
-          #Check reverse connections.
+          # Check reverse connections.
           self.assertTrue(
-          self.MAP[(0,1,0)].is_connected_at('south')
-              )
+              self.MAP[(0, 1, 0)].is_connected_at('south')
+          )
           self.assertTrue(
-          self.MAP[(0,2,0)].is_connected_at('south')
-              )
+              self.MAP[(0, 2, 0)].is_connected_at('south')
+          )
           self.assertTrue(
-          self.MAP[(0,0,1)].is_connected_at('down')
-              )
-
+              self.MAP[(0, 0, 1)].is_connected_at('down')
+          )
 
       def test_can_move_between_rooms(self):
-          pos = self.MAP[(0,0,0)]
+          pos = self.MAP[(0, 0, 0)]
 
           pos = self.MAP[pos.move('north')]
 
-          self.assertEqual(pos,self.MAP[(0,1,0)],
+          self.assertEqual(pos, self.MAP[(0, 1, 0)],
                            "Position did not move!")
           pos = self.MAP[pos.move('south')]
 
-          self.assertEqual(pos,self.MAP[(0,0,0)],
+          self.assertEqual(pos, self.MAP[(0, 0, 0)],
                            "Position failed in reverse")
 
       def test_cannot_move_invalid_direction(self):
 
-          pos = self.MAP[(0,0,0)]
+          pos = self.MAP[(0, 0, 0)]
           try:
               pos = self.MAP[pos.move('up')]
           except KeyError:
-              self.assertEqual(pos,self.MAP[(0,0,0)])
-
+              self.assertEqual(pos, self.MAP[(0, 0, 0)])
 
       def test_does_not_move_if_room_is_undiscovered(self):
 
-          pos = self.MAP[(0,0,0)]
+          pos = self.MAP[(0, 0, 0)]
           try:
               pos.move("east")
           except AssertionError:
-              self.assertEqual(pos,self.MAP[(0,0,0)])
-
+              self.assertEqual(pos, self.MAP[(0, 0, 0)])
 
       def test_can_spawn_new_rooms(self):
           discovered_room = house.Room(
@@ -685,24 +670,23 @@ If the newly discoved room has an event in it, the player must stop moving and a
 
           )
 
-
-          pos = self.MAP[(0,0,0)]
+          pos = self.MAP[(0, 0, 0)]
           house.spawn_room(
-              (1,0,0),
+              (1, 0, 0),
               discovered_room
           )
-          self.MAP[(1,0,0)].set_coordnate((1,0,0))
-          self.MAP[(1,0,0)].set_edges()
+          self.MAP[(1, 0, 0)].set_coordnate((1, 0, 0))
+          self.MAP[(1, 0, 0)].set_edges()
 
-          pos.bi_connect('east',self.MAP[(1,0,0)])
+          pos.bi_connect('east', self.MAP[(1, 0, 0)])
 
           pos = self.MAP[pos.move('east')]
 
-          self.assertEqual(pos,self.MAP[(1,0,0)],
+          self.assertEqual(pos, self.MAP[(1, 0, 0)],
                            "Wrong room?!? {0}".format(pos.name)
-          )
+                           )
 
-          #From Room experiment
+          # From Room experiment
 
       def test_rooms_have_no_direction_by_default(self):
           test_room = house.Room(
@@ -735,48 +719,47 @@ If the newly discoved room has an event in it, the player must stop moving and a
           self.assertEqual(
               edges[3]['direction'], 'north')
 
-
       def test_room_list_has_rooms(self):
           self.assertNotEqual(house.ROOM_LIST, [],
                               "ROOM_LIST is empty!!")
 
-
-      
       def test_can_not_put_room_on_wrong_floor(self):
-          room_list_copy = list(house.ROOM_LIST)
-          house.ROOM_LIST = [house.Room(
-              "Evil Room!",
-              (False,False,False,False),
-              (1,2,3))]
-          self.pos = house.MAP[(0,0,0)]
-          discover_room = house.discover((1,0,0),None)
-          self.assertEqual(discover_room, "ERROR!")
-          house.ROOM_LIST = room_list_copy
-      
 
+          testroom = [house.Room(
+              "Evil Room!",
+              (False, False, False, False),
+              (1, 2, 3))]
+          with self.assertRaises(KeyError):
+              house.discover((6,6,6),None,roomlist=testroom)
       def test_discovered_room_has_coordnate(self):
-          room_list_copy = list(house.ROOM_LIST)
-          house.ROOM_LIST = [house.Room(
+          testroom = [house.Room(
               "Test Room",
-              (True,True,True,True),
-              (-1,0,1))]
-          house.discover((-1,0,0),None)
-          self.assertNotEqual(house.MAP[(-1,0,0)].x, None)
-          house.ROOM_LIST = room_list_copy
+              (True, True, True, True),
+              (-1, 0, 1))]
+          house.discover((-1, 0, 0), None, roomlist=testroom)
+          self.assertNotEqual(house.MAP[(-1, 0, 0)].x, None)
 
       def test_discovered_room_has_edges(self):
-          room_list_copy = list(house.ROOM_LIST)
-          house.ROOM_LIST = [house.Room(
+          testroom = [house.Room(
               "Test Room",
-              (True,True,True,True),
-              (-1,0,1))]
-          house.discover((-2,0,0),None)
-          for edge in house.MAP[(-2,0,0)].edges:
-              self.assertNotEqual(edge,None)
-
-          house.ROOM_LIST = room_list_copy
+              (True, True, True, True),
+              (-1, 0, 1))]
+          house.discover((-2, 0, 0), None, roomlist=testroom)
+          for edge in house.MAP[(-2, 0, 0)].edges:
+              self.assertNotEqual(edge, None)
 
 
+      def test_each_room_is_placeable(self):
+          x = 1
+          y = 0
+          z = 0
+          roomlist = list(house.ROOM_LIST)
+          while roomlist != []:
+              room = roomlist[0]
+              z = room.allowed_floors[0]
+              house.discover((x,y,z),None, roomlist)
+              x += 1
+          self.assertEqual(len(roomlist), 0, "ROOM_LIST did not empty")
 #+END_SRC
 
 #+BEGIN_SRC sh
