--- a/index.org
+++ b/index.org
@@ -427,10 +427,20 @@ happen once per player per game.
 These rooms all have something special about them by default that is difficult to catagories, or would lead to unnessisarly
 overly complicated pieces. Instead these rooms all get clumped into the catagory of "special".
 *** TODO Mystic Elevator
+Once per turn, the player can make a roll to move the elevator.
+This will change the coordnate of the elevator and anything inside of it, to the new coordnate.
+The elevator cannot be used to block off a floor.
+The traitor can move the elevator at will.
 *** TODO Coal Chute
+Upon entering the coal chute, the player is moved down to (0,0,-1). This is a one way trip
 *** TODO Gallery
+If the ballroom is on the board, the player can jump down to it for one die of physical damage.
+This is one way
 *** TODO Vault
+Once per turn, players can try to unlock the vault. If they succeed they are rewarded two items, and the vault becomes empty.
 *** TODO Collapsed Room
+Upon leaving the Collapsed room, players must make a speed check.
+If they fail they fall into a discoved room in the basement and take one die of physical damage.
 ** Connecting Rooms
 #+name: Connect_Rooms
 #+BEGIN_SRC python 
@@ -510,23 +520,20 @@ overly complicated pieces. Instead these rooms all get clumped into the catagory
 
       return False
 #+END_SRC
-** Moving Between Rooms
+** Returning A Connection
  Room objects have a move method, this takes a direction from their edges table and returns the coordnates.
  The idea is so that each character, monster, ect has a "position" that is the room's coordnates.
  In the event that the room hasn't been discovered, it sends up an assertion error that signals to the engine to discover a room.
 
  #+name: Move_Room
  #+BEGIN_SRC python 
-   def move(self, direction):
+   def get_connection(self, direction):
        for edge in self.edges:
-           if edge["direction"] == direction:
-               assert edge["enabled"] != False
-               return edge["connection"]
-
-   def teleport(self,coordnate):
-       return coordnate
-
-
+           if edge['direction'] == direction:
+               return edge['connection']
+           else:
+               pass
+       raise KeyError #replace with custom error later
  #+END_SRC
 
 ** Discovering Rooms
@@ -536,42 +543,20 @@ If the newly discoved room has an event in it, the player must stop moving and a
 
 #+name: map_discover
 #+BEGIN_SRC python
+  def discover(
+          coordnate,
+          MAP=MAP,
+          ROOM_LIST=ROOM_LIST):
 
-  def spawn_room(coordnate, room):
-      try:
-          assert coordnate not in MAP
-          MAP[coordnate] = room
-          return None
+      """Spawns a room if possible, then sets everything up"""
+      pass
 
-      except AssertionError:
-          print("Error, coordnate is already in use by: {}".format(
-              MAP[coordnate].name)
-		)
-          raise KeyError
+  def placeable_room_exists(coordnate,ROOM_LIST=ROOM_LIST):
+      return True in [coordnate[2] in room.allowed_floors for room in ROOM_LIST]
 
-
-
-
-  def discover(coordnate,direction,roomlist=ROOM_LIST):
-      def can_place_room_on_on_floor(room):
-          return coordnate[2] in room.allowed_floors
-      for room in roomlist:
-          if can_place_room_on_on_floor(room):
-              spawn_room(coordnate,room)
-              MAP[coordnate].set_coordnate(coordnate)
-              MAP[coordnate].set_edges()
-              MAP[coordnate].set_connections()
-              roomlist.remove(room)
-              return None
-          else:
-              pass
-
-      raise KeyError(
-          "Error: No rooms could be placed on {0}".format(coordnate[2]))
-
-
-
-
+  def set_rotation(room,direction):
+      #Will rotate the room so one enabled edge is faceing the room that lead to it.
+      pass 
 
 
 #+END_SRC
@@ -731,11 +716,11 @@ If the newly discoved room has an event in it, the player must stop moving and a
       def test_can_move_between_rooms(self):
           pos = self.MAP[(0, 0, 0)]
 
-          pos = self.MAP[pos.move('north')]
+          pos = self.MAP[pos.get_connection('north')]
 
           self.assertEqual(pos, self.MAP[(0, 1, 0)],
                            "Position did not move!")
-          pos = self.MAP[pos.move('south')]
+          pos = self.MAP[pos.get_connection('south')]
 
           self.assertEqual(pos, self.MAP[(0, 0, 0)],
                            "Position failed in reverse")
@@ -744,16 +729,8 @@ If the newly discoved room has an event in it, the player must stop moving and a
 
           pos = self.MAP[(0, 0, 0)]
           try:
-              pos = self.MAP[pos.move('up')]
+              pos = self.MAP[pos.get_connection('up')]
           except KeyError:
-              self.assertEqual(pos, self.MAP[(0, 0, 0)])
-
-      def test_does_not_move_if_room_is_undiscovered(self):
-
-          pos = self.MAP[(0, 0, 0)]
-          try:
-              pos.move("east")
-          except AssertionError:
               self.assertEqual(pos, self.MAP[(0, 0, 0)])
 
       def test_can_spawn_new_rooms(self):
