--- a/index.org
+++ b/index.org
@@ -159,7 +159,7 @@ The house is a 3 dimensional space, with various points representing the rooms.
    <<Room_List_Object>>
    <<Map_Object>>
    #internal functions
-
+   <<house_discover>>
 
  #+END_SRC
 
@@ -244,6 +244,17 @@ If you want to add in new rooms:
               eval(room[2]))
 
 
+      def draw_room(self):
+          return self.LIST.pop()
+
+      def add_room(self,*rooms,randomize=False):
+          if randomize:
+              rooms.random.shuffle()
+
+          for room in rooms:
+              self.LIST.append(room)
+
+          return None
 #+END_SRC
 
 ** Map Object
@@ -541,24 +552,70 @@ Should a player move into a room that hasn't been discovered yet, that player un
 This selection is done at random from the room list, certain rooms can only be placed on certain floors.
 If the newly discoved room has an event in it, the player must stop moving and activate the event!
 
-#+name: map_discover
+#+name: house_discover
 #+BEGIN_SRC python
   def discover(
           coordnate,
-          MAP=MAP,
-          ROOM_LIST=ROOM_LIST):
+          direction,
+          MAP=None,
+          ROOM_LIST=None):
 
       """Spawns a room if possible, then sets everything up"""
-      pass
+      if placeable_room_exists(coordnate,ROOM_LIST):
+          discarded_rooms = []
+          Run = True
+          while Run:
+              drawn_room = ROOM_LIST.draw_room()
+              if can_place_room(coordnate,drawn_room):
+                  MAP.spawn_room(coordnate,drawn_room)
+                  MAP.MAP[coordnate].set_coordnate(coordnate)
+                  r = set_rotation(drawn_room,direction)
+                  MAP.MAP[coordnate].set_edges(r)
+                  Run = False
+              else:
+                  discarded_rooms.append(drawn_room)
+          if discarded_rooms != []:
+              ROOM_LIST.add_room(*discarded_rooms,randomize=True)
 
-  def placeable_room_exists(coordnate,ROOM_LIST=ROOM_LIST):
-      return True in [coordnate[2] in room.allowed_floors for room in ROOM_LIST]
+          return None
+
+      else:
+          raise IndexError('No Placeable rooms on this floor!') #Replace with custom exception later
+
+  def placeable_room_exists(coordnate,ROOM_LIST=None):
+      return True in [coordnate[2] in room.allowed_floors for room in ROOM_LIST.LIST]
 
   def set_rotation(room,direction):
       #Will rotate the room so one enabled edge is faceing the room that lead to it.
-      pass 
+      #consider making the opposite table in the document
+      cardinal_directions = ('north','east','south','west',)
+      opposite_edges = {'north': 'south',
+			'east': 'west',
+			'south': 'north',
+			'west': 'east'}
+      allowed_rotation = []
+      shape = room.shape
+      for rotation in range(4): #anything more is redundant
+          direction_wheel = itertools.cycle(cardinal_directions)
+          test_rotation = {}
+          for n in range(rotation): #spin the wheel
+              direction_wheel.__next__()
+              continue
+          for edge in shape:
+              test_rotation[direction_wheel.__next__()] = edge
+          if test_rotation[
+                  opposite_edges[direction]] == True:
+              allowed_rotation.append(rotation)
+          else:
+              pass
+      return allowed_rotation[0] #replace with prompt for user input
+        
 
+        
+        
 
+  def can_place_room(coordnate,room):
+      return coordnate[2] in room.allowed_floors
 #+END_SRC
 
 ** Tests
@@ -579,46 +636,15 @@ If the newly discoved room has an event in it, the player must stop moving and a
 #+BEGIN_SRC python :tangle tests/house_tests.py :noweb yes 
   <<house_test_imports>>
 
-  class HouseFunctionalTests(unittest.TestCase):
 
-      def test_can_not_put_room_on_wrong_floor(self):
+  class Discover_Tests(unittest.TestCase):
+      def setUp(self):
+          self.MAP = house.Map()
+          self.ROOM_LIST = house.RoomList(house.room_list)
 
-          testroom = [house.Room(
-              "Evil Room!",
-              (False, False, False, False),
-              (1, 2, 3))]
-          with self.assertRaises(KeyError):
-              house.discover((6,6,6),None,roomlist=testroom)
-      def test_discovered_room_has_coordnate(self):
-          testroom = [house.Room(
-              "Test Room",
-              (True, True, True, True),
-              (-1, 0, 1))]
-          house.discover((-1, 0, 0), None, roomlist=testroom)
-          self.assertNotEqual(house.MAP[(-1, 0, 0)].x, None)
-
-      def test_discovered_room_has_edges(self):
-          testroom = [house.Room(
-          "Test Room",
-              (True, True, True, True),
-              (-1, 0, 1))]
-          house.discover((-2, 0, 0), None, roomlist=testroom)
-          for edge in house.MAP[(-2, 0, 0)].edges:
-              self.assertNotEqual(edge, None)
-
-
-      def test_each_room_is_placeable(self):
-          x = 1
-          y = 0
-          z = 0
-          roomlist = list(house.ROOM_LIST)
-          while roomlist != []:
-              room = roomlist[0]
-              z = room.allowed_floors[0]
-              house.discover((x,y,z),None, roomlist)
-              x += 1
-          self.assertEqual(len(roomlist), 0, "ROOM_LIST did not empty")
-
+      def test_can_discover_room(self):
+          discover((1,0,0), 'east',MAP=self.MAP,ROOM_LIST=ROOM_LIST)
+          self.MAP.MAP(1,0,0)
 #+END_SRC
 
 *** Room List Tests
